# unit-converter-cli

./: README.md  agent.py  converter.py  length.py  pyproject.toml  requirements.txt  temperature.py  weight.py
data/: examples.json
fallbacks/: vector_fallback.py
test/: test_agent.py  test_agent_fallback.py  test_converter.py  test_length.py  test_temperature.py  test_weight.py
